added location icon

--- a/result.html
+++ b/result.html
@@ -24,8 +24,8 @@
             </div>
         </div>
     <!-- Add GitHub link here -->
-    <div class="text-center mb-3">
-        <a href="" id="userGitHub">GitHub link goes here</a>
+    <div class="text-left mb-3">
+        <a href="" id="userGitHub">GitHub link</a>
     </div>
 
     <!-- Search Bar -->
